# polka

./: CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  TODO.md  do_release  yes_ship_it.conf
doc/: CMakeLists.txt
icons/: CMakeLists.txt
lib/polka/: CMakeLists.txt  htmlrenderer.cpp  polka.cpp  polka.h  polka_export.h
microkde/: KJob  KJob.cpp  KLineEdit  KLineEdit.cpp  KUrl
microkde/kio/: job.cpp  job.h
schema/: polka.xml
src/: CMakeLists.txt  Polka.pro  TODO  addpicturedialog.cpp  addpicturedialog.h  addpicturewidget.cpp  addpicturewidget.h  addresseditor.cpp  addresseditor.h  buttonitem.cpp  buttonitem.h  commenteditor.cpp  commenteditor.h  fanmenu.h  firststartdata.cpp  firststartdata.h  gitdir.cpp  gitdir.h  gitremote.cpp  groupadderitem.cpp  groupgraphicsview.cpp  groupgraphicsview.h  grouplistview.cpp  grouplistview.h  groupview.h  historyview.cpp  historyview.h  identityitem.cpp  imageloader.cpp  imageloader.h  imageloaderfacebook.cpp  imageloaderfacebook.h  imageloadertwitter.cpp  imageloadertwitter.h  labelitem.cpp  labelitem.h  linkeditor.cpp  linkeditor.h  localpicture.cpp  magicmenuitem.cpp  (+41 more)
yes_ship_it/assertions/: web_site.rb
